--- a/i.html
+++ b/i.html
@@ -17,12 +17,15 @@
             background-color: #C08C82; /* لون خلفية الشريط العلوي */
             color: white;
             padding: 10px 0;
+            text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
+            animation: slideIn 1s ease-in-out;
             flex-wrap: wrap;
         }
         header img {
+            vertical-align: middle;
             height: 40px;
             margin-right: 10px;
         }
@@ -55,12 +58,13 @@
             padding: 40px;
             text-align: center;
             margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* إضافة ظل */
         }
         .main-content {
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* إضافة ظل */
             margin-bottom: 20px;
         }
         footer {
@@ -111,7 +115,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo"> <!-- شعارك -->
+        <img src="logo.jfif" alt="Logo"> <!-- شعارك -->
         <h1>Aya Al Betar</h1>
     </header>
     <nav>
@@ -132,43 +136,77 @@
             <h2>About Me</h2>
             <p>Date of birth: 01/01/2000</p>
             <p>Nationality: Syrian</p>
+            <p>Home: Homs, Syria</p>
         </div>
 
         <div class="main-content" id="work">
             <h2>Work Experience</h2>
-            <h3>Web Developer at Dealplor</h3>
-            <p>Dubai, United Arab Emirates</p>
-            <ul>
-                <li>Developing each element of the server side</li>
-                <li>Writing clean and scalable code</li>
-                <li>Software testing at different stages of development</li>
-                <li>Identifying and correcting possible errors</li>
-                <li>Creating databases</li>
-                <li>Working with website design</li>
-            </ul>
+            <div class="content-block">
+                <h3>Web Developer at Dealplor</h3>
+                <p>Dubai, United Arab Emirates (01/12/2022 – Current)</p>
+                <ul>
+                    <li>Developing each element of the server side</li>
+                    <li>Writing clean and scalable code</li>
+                    <li>Software testing at different stages of development</li>
+                    <li>Identifying and correcting possible errors</li>
+                    <li>Creating databases</li>
+                    <li>Working with website design</li>
+                </ul>
+            </div>
         </div>
 
         <div class="main-content" id="education">
             <h2>Education and Training</h2>
-            <h3>Al-Baath University</h3>
-            <p>Bachelor of Software Engineering</p>
-            <p>Homs, Syria</p>
+            <div class="content-block">
+                <h3>Al-Baath University</h3>
+                <p>Bachelor of Software Engineering (15/09/2017 – 24/01/2023)</p>
+                <p>Homs, Syria</p>
+            </div>
+            <div class="content-block">
+                <h3>Web Development Online Training at Deaplor</h3>
+                <p>Dubai, United Arab Emirates (01/08/2022 – 01/12/2022)</p>
+            </div>
         </div>
 
         <div class="main-content" id="skills">
             <h2>Skills</h2>
-            <h3>Language Skills</h3>
-            <p>Mother tongue: Arabic</p>
-            <p>Other languages: English (B1), German (A1)</p>
-
-            <h3>Digital Skills</h3>
+            <div class="content-block">
+                <h3>Language Skills</h3>
+                <p><i class="fa fa-language"></i>Mother tongue: Arabic</p>
+                <p>Other languages:</p>
+                <ul>
+                    <li><i class="fa fa-language"></i>English: Independent User (B1)</li>
+                    <li><i class="fa fa-language"></i>German: Basic User (A1)</li>
+                </ul>
+            </div>
+            <div class="content-block">
+                <h3>Digital Skills</h3>
             <div class="skills">
                 <img src="python-icon.png" alt="Python"> Python
                 <img src="js-icon.png" alt="JavaScript"> JavaScript
                 <img src="html-icon.png" alt="HTML"> HTML
                 <img src="css-icon.png" alt="CSS"> CSS
                 <img src="sql-icon.png" alt="SQL"> SQL
-                <!-- أضف أيقونات إضافية حسب الحاجة -->
+                <p>
+                    <i class="fa fa-code"></i> Python, 
+                    <i class="fa fa-code"></i> Sails.js, 
+                    <i class="fa fa-database"></i> SQL, 
+                    <i class="fa fa-code"></i> NestJS Framework, 
+                    <i class="fa fa-database"></i> MongoDB, 
+                    <i class="fa fa-code"></i> JavaScript, 
+                    <i class="fa fa-html5"></i> HTML, 
+                    <i class="fa fa-css3-alt"></i> CSS, 
+                    <i class="fa fa-docker"></i> Docker, 
+                    <i class="fa fa-code"></i> Nuxt.js, 
+                    <i class="fa fa-git-alt"></i> Git, 
+                    <i class="fa fa-bitbucket"></i> Bitbucket, 
+                    <i class="fa fa-jira"></i> Atlassian stack (Jira, Confluence), 
+                    <i class="fa fa-code"></i> Some JavaScript
+                </p>
+            </div>
+            <div class="content-block">
+                <h3>Communication and Interpersonal Skills</h3>
+                <p><i class="fa fa-comments"></i> Problem-solving, adaptability, self-development, time management</p>
             </div>
         </div>
 
