--- a/i.html
+++ b/i.html
@@ -10,22 +10,19 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4; /* لون الخلفية الأساسي */
+            background-color: #f8f8f8; /* لون الخلفية الأساسي */
             color: #333; /* لون النص الأساسي */
         }
         header {
-            background-color: #C08C82; /* لون خلفية الشريط العلوي */
+            background-color: #ff6b81; /* لون خلفية الشريط العلوي */
             color: white;
             padding: 10px 0;
-            text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
-            animation: slideIn 1s ease-in-out;
             flex-wrap: wrap;
         }
         header img {
-            vertical-align: middle;
             height: 40px;
             margin-right: 10px;
         }
@@ -36,7 +33,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #924F4A; /* لون خلفية الناف بار */
+            background-color: #ff4d6d; /* لون خلفية الناف بار */
             padding: 10px 0;
             flex-wrap: wrap;
         }
@@ -47,13 +44,13 @@
             text-transform: uppercase;
         }
         nav a:hover {
-            background-color: #6F403B; /* لون عند تمرير الفأرة */
+            background-color: #ff2d55; /* لون عند تمرير الفأرة */
         }
         .content {
             padding: 20px;
         }
         .welcome {
-            background: linear-gradient(135deg, #C08C82, #F0A6A0); /* تدرج لوني للخلفية */
+            background: linear-gradient(135deg, #ff6b81, #ff4d6d); /* تدرج لوني للخلفية */
             color: white;
             padding: 40px;
             text-align: center;
@@ -66,17 +63,32 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* إضافة ظل */
             margin-bottom: 20px;
+            text-align: center; /* توسيط النص */
+        }
+        .main-content h2 {
+            text-align: center; /* توسيط العناوين */
+            color: #ff6b81; /* لون العناوين */
         }
         footer {
-            background-color: #C08C82; /* لون خلفية الفوتر */
+            background-color: #ff6b81; /* لون خلفية الفوتر */
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 20px 0;
         }
         .skills img {
             height: 20px;
             margin-right: 8px;
             vertical-align: middle;
+        }
+        .certificate img {
+            max-width: 100%;
+            height: auto;
+            max-height: 200px; /* تحديد أقصى ارتفاع للصورة */
+            display: block;
+            margin: 0 auto 10px; /* إضافة بعض الفراغ أسفل الصورة */
+        }
+        .certificate p {
+            margin-top: 10px;
         }
 
         @media (max-width: 768px) {
@@ -115,7 +127,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.jfif" alt="Logo"> <!-- شعارك -->
+        <img src="aya-logo.png" alt="Logo"> <!-- شعارك الجديد -->
         <h1>Aya Al Betar</h1>
     </header>
     <nav>
@@ -124,7 +136,6 @@
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
         <a href="#certificates">Certificates</a>
-        <a href="#contact">Contact</a>
     </nav>
     <div class="content">
         <div class="welcome">
@@ -136,77 +147,43 @@
             <h2>About Me</h2>
             <p>Date of birth: 01/01/2000</p>
             <p>Nationality: Syrian</p>
-            <p>Home: Homs, Syria</p>
         </div>
 
         <div class="main-content" id="work">
             <h2>Work Experience</h2>
-            <div class="content-block">
-                <h3>Web Developer at Dealplor</h3>
-                <p>Dubai, United Arab Emirates (01/12/2022 – Current)</p>
-                <ul>
-                    <li>Developing each element of the server side</li>
-                    <li>Writing clean and scalable code</li>
-                    <li>Software testing at different stages of development</li>
-                    <li>Identifying and correcting possible errors</li>
-                    <li>Creating databases</li>
-                    <li>Working with website design</li>
-                </ul>
-            </div>
+            <h3>Web Developer at Dealplor</h3>
+            <p>Dubai, United Arab Emirates</p>
+            <ul>
+                <li>Developing each element of the server side</li>
+                <li>Writing clean and scalable code</li>
+                <li>Software testing at different stages of development</li>
+                <li>Identifying and correcting possible errors</li>
+                <li>Creating databases</li>
+                <li>Working with website design</li>
+            </ul>
         </div>
 
         <div class="main-content" id="education">
             <h2>Education and Training</h2>
-            <div class="content-block">
-                <h3>Al-Baath University</h3>
-                <p>Bachelor of Software Engineering (15/09/2017 – 24/01/2023)</p>
-                <p>Homs, Syria</p>
-            </div>
-            <div class="content-block">
-                <h3>Web Development Online Training at Deaplor</h3>
-                <p>Dubai, United Arab Emirates (01/08/2022 – 01/12/2022)</p>
-            </div>
+            <h3>Al-Baath University</h3>
+            <p>Bachelor of Software Engineering</p>
+            <p>Homs, Syria</p>
         </div>
 
         <div class="main-content" id="skills">
             <h2>Skills</h2>
-            <div class="content-block">
-                <h3>Language Skills</h3>
-                <p><i class="fa fa-language"></i>Mother tongue: Arabic</p>
-                <p>Other languages:</p>
-                <ul>
-                    <li><i class="fa fa-language"></i>English: Independent User (B1)</li>
-                    <li><i class="fa fa-language"></i>German: Basic User (A1)</li>
-                </ul>
-            </div>
-            <div class="content-block">
-                <h3>Digital Skills</h3>
+            <h3>Language Skills</h3>
+            <p>Mother tongue: Arabic</p>
+            <p>Other languages: English (B1), German (A1)</p>
+
+            <h3>Digital Skills</h3>
             <div class="skills">
                 <img src="python-icon.png" alt="Python"> Python
                 <img src="js-icon.png" alt="JavaScript"> JavaScript
                 <img src="html-icon.png" alt="HTML"> HTML
                 <img src="css-icon.png" alt="CSS"> CSS
                 <img src="sql-icon.png" alt="SQL"> SQL
-                <p>
-                    <i class="fa fa-code"></i> Python, 
-                    <i class="fa fa-code"></i> Sails.js, 
-                    <i class="fa fa-database"></i> SQL, 
-                    <i class="fa fa-code"></i> NestJS Framework, 
-                    <i class="fa fa-database"></i> MongoDB, 
-                    <i class="fa fa-code"></i> JavaScript, 
-                    <i class="fa fa-html5"></i> HTML, 
-                    <i class="fa fa-css3-alt"></i> CSS, 
-                    <i class="fa fa-docker"></i> Docker, 
-                    <i class="fa fa-code"></i> Nuxt.js, 
-                    <i class="fa fa-git-alt"></i> Git, 
-                    <i class="fa fa-bitbucket"></i> Bitbucket, 
-                    <i class="fa fa-jira"></i> Atlassian stack (Jira, Confluence), 
-                    <i class="fa fa-code"></i> Some JavaScript
-                </p>
-            </div>
-            <div class="content-block">
-                <h3>Communication and Interpersonal Skills</h3>
-                <p><i class="fa fa-comments"></i> Problem-solving, adaptability, self-development, time management</p>
+                <!-- أضف أيقونات إضافية حسب الحاجة -->
             </div>
         </div>
 
@@ -217,16 +194,15 @@
                 <p>This certificate indicates that Aya Al Betar has successfully completed the required training and has demonstrated proficiency in the respective field.</p>
             </div>
         </div>
+    </div>
 
-        <div class="main-content" id="contact">
+    <footer>
+        <div id="contact">
             <h2>Contact</h2>
             <p><i class="fa fa-envelope"></i> Email: aya2000albetar@gmail.com</p>
             <p><i class="fa fa-phone"></i> Work: (+963) 947895611</p>
             <p><i class="fa fa-map-marker-alt"></i> Home: Homs, Syria</p>
         </div>
-    </div>
-
-    <footer>
         <p>&copy; 2024 Aya Al Betar. All rights reserved.</p>
     </footer>
 </body>
