--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 <body>
     <header>
-        <img src="logo.jfif" alt="Logo"> <!-- شعارك -->
+        <img src="logo.png" alt="Logo"> <!-- شعارك -->
         <h1>Aya Al Betar</h1>
     </header>
     <nav>
