--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 justify-content: center;
             }
 
-            .skills img {
+            .skills  ul li img {
                 margin-bottom: 10px;
             }
         }
@@ -196,13 +196,17 @@
             .welcome {
                 padding: 20px;
             }
+            footer p {
+                padding: 0px;
+                margin: 0px;
+            }
         }
     </style>
 </head>
 
 <body>
     <header>
-        <img src="logo.png" alt="Logo"> <!-- شعارك -->
+        <img src="images/logo.png" alt="Logo"> <!-- شعارك -->
         <h1>Aya Al Betar</h1>
     </header>
     <nav>
@@ -262,10 +266,10 @@
             <div class="content-block">
                 <h3>Language Skills</h3>
                 <p><i class="fa fa-language"></i> Mother Language: Arabic</p>
-                <p>Other languages:</p>
+                <h4>Other languages:</h4>
                 <ul>
-                    <li><i class="fa fa-language"></i> English: Independent User (B1)</li>
-                    <li><i class="fa fa-language"></i>  German: Basic User (A1)</li>
+                    <li><p></p><i class="fa fa-language"></i> English: Independent User (B1)</li>
+                    <li><p></p><i class="fa fa-language"></i>  German: Basic User (A1)</li>
                 </ul>
             </div>
         </div>
@@ -275,20 +279,20 @@
             <div class="skills">
                 <ul>
                     <li>
-                        <img src="python-icon.png" alt="Python">Python
+                        <img src="/images/python-icon.png" alt="Python"> Python
                     </li>
-                    <li><img src="js-icon.png" alt="JavaScript"> JavaScript</li>
-                    <li> <img src="html-icon.png" alt="HTML"> HTML</li>
-                    <li> <img src="css.png" alt="CSS"> CSS</li>
-                    <li><img src="sql.png" alt="SQL"> SQL</li>
-                    <li> <img src="mongo.png" alt="mongo"> MongoDB </li>
-                    <li><img src="nestjs.png" alt="nest"> NestJS Framework</li>
-                    <li> <img src="sails.png" alt="sails"> SailsJs Framework</li>
-                    <li> <img src="nuxt.png" alt="nuxt">Nuxtjs Framework</li>
-                    <li> <img src="docker.png" alt="docker"> Docker </li>
-                    <li> <img src="git.png" alt="git">Git</li>
-                    <li> <img src="bitbucket.png" alt="bitbucket">Bitbucket</li>
-                    <li><img src="jira.png" alt="jira">Atlassian stack (Jira, Confluence), </li>
+                    <li><p><img src="/images/js-icon.png" alt="JavaScript">  JavaScript</p></li>
+                    <li><p></p> <img src="/images/html-icon.png" alt="HTML"> HTML</li>
+                    <li> <p></p><img src="/images/css.png" alt="CSS"> CSS</li>
+                    <li><p></p><img src="/images/sql.png" alt="SQL"> SQL</li>
+                    <li><p></p> <img src="/images/mongo.png" alt="mongo"> MongoDB </li>
+                    <li><p></p><img src="/images/nestjs.png" alt="nest"> NestJS Framework</li>
+                    <li> <p></p><img src="/images/sails.png" alt="sails"> SailsJs Framework</li>
+                    <li><p></p> <img src="/images/nuxt.png" alt="nuxt">Nuxtjs Framework</li>
+                    <li><p></p> <img src="/images/docker.png" alt="docker"> Docker </li>
+                    <li><p></p> <img src="/images/git.png" alt="git">Git</li>
+                    <li><p></p> <img src="/images/bitbucket.png" alt="bitbucket">Bitbucket</li>
+                    <li><p></p><img src="/images/jira.png" alt="jira">Atlassian stack (Jira, Confluence), </li>
 
                 </ul>
 
@@ -303,7 +307,7 @@
         <div class="main-content" id="certificates">
             <h2>Certificates</h2>
             <div class="certificate">
-                <img src="certificate.jpg" alt="Certificate Image">
+                <img src="images/certificate.jpg" alt="Certificate Image">
                 <p>This certificate indicates that Aya Al Betar has successfully completed the required training and has
                     demonstrated proficiency in the respective field.</p>
             </div>
